# dsa

./: README.md  dsa_tracker.ods
array/: array-qns  remove-duplicates-sorted-array-easy.cpp  segregate0sand1s.cpp
heap/: heapsort.cpp  kth-Largest-Element.cpp  merge-k-sorted-lists.cpp  priority_queue.cpp
linkedList/: addTwoNumbers.cpp  deleteNodeWithoutHead.py  linkedList.cpp  linkedList.h  linkedlist-qns  reverse-singly-linked-list.py
slidingPatterns/: find_avgs_of_subarrays.py  fruits-into-baskets.cpp  longest-substring-with-distinct-characters.cpp  longest_substring_with_k_distinct_characters.cpp  max_sum_of_subarrays.py
stackAndQueue/: max-stack.cpp  nextGreaterElement.cpp  stockSpan.cpp  treeTraversalIterative.cpp
tree/: CMakeLists.txt  common.h  genericBST.cpp  isBST.cpp  iterative-tree-traversals.cpp  kth-max-value-in-bst.cpp  left_view_of_tree.cpp  lowest-common-ancestor-bst.cpp  main.cpp
tree/utilities/: bst.cpp  bst.h  debugger.cpp  debugger.h  node.h  tree.cpp  tree.h
twoPointers/: pair-with-target-sum.py
